--- a/app/src/main/res/layout/activity_local.xml
+++ b/app/src/main/res/layout/activity_local.xml
@@ -7,51 +7,57 @@
     tools:context="com.example.genks.decisionmaker.Local">
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBox_food"
         android:layout_width="76dp"
         android:layout_height="33dp"
+        android:checked="false"
+        android:duplicateParentState="false"
+        android:onClick="onFoodClicked"
         android:text="@string/food_box"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/checkBox3"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.223" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/checkBox_ent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.259" />
 
     <CheckBox
-        android:id="@+id/checkBox2"
+        android:id="@+id/checkBox_shop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onShopClicked"
         android:text="@string/shopping_box"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:text="@string/shopping_box"
-        app:layout_constraintRight_toLeftOf="@+id/checkBox4"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/checkBox_rec"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.352" />
+        app:layout_constraintVertical_bias="0.363"
+        tools:text="@string/shopping_box" />
 
     <CheckBox
-        android:id="@+id/checkBox3"
+        android:id="@+id/checkBox_ent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onArtClicked"
         android:text="@string/entertainment_box"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:text="@string/entertainment_box"
-        app:layout_constraintLeft_toRightOf="@+id/checkBox"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/checkBox_food"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.223" />
+        app:layout_constraintVertical_bias="0.258"
+        tools:text="@string/entertainment_box" />
 
     <CheckBox
-        android:id="@+id/checkBox4"
+        android:id="@+id/checkBox_rec"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onRecClicked"
         android:text="@string/recreation_box"
-        tools:text="@string/recreation_box"
+        app:layout_constraintBottom_toTopOf="@+id/checkThreeDollar"
+        app:layout_constraintLeft_toRightOf="@+id/checkBox_shop"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/checkBox2"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox8"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox3"
-        app:layout_constraintVertical_bias="0.441" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox_ent"
+        app:layout_constraintVertical_bias="0.441"
+        tools:text="@string/recreation_box" />
 
     <Button
         android:id="@+id/button3"
@@ -78,46 +84,47 @@
         tools:text="@string/idk_button" />
 
     <CheckBox
-        android:id="@+id/checkBox6"
+        android:id="@+id/checkOneDollar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/dollar_box"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:text="@string/dollar_box"
-        app:layout_constraintRight_toLeftOf="@+id/checkBox7"
         android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
+        android:onClick="onOneDollarClicked"
+        android:text="@string/dollar_box"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/checkTwoDollar"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/dollar_box" />
 
     <CheckBox
-        android:id="@+id/checkBox7"
+        android:id="@+id/checkTwoDollar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onTwoDollarClicked"
         android:text="@string/twodollar_box"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/checkOneDollar"
+        app:layout_constraintRight_toLeftOf="@+id/checkThreeDollar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498"
-        tools:text="@string/twodollar_box"
-        app:layout_constraintRight_toLeftOf="@+id/checkBox8"
-        app:layout_constraintLeft_toRightOf="@+id/checkBox6" />
+        tools:text="@string/twodollar_box" />
 
     <CheckBox
-        android:id="@+id/checkBox8"
+        android:id="@+id/checkThreeDollar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="8dp"
+        android:onClick="onThreeDollarClicked"
         android:text="@string/threedollar_box"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/checkTwoDollar"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/threedollar_box"
         app:layout_constraintVertical_bias="0.498"
-        app:layout_constraintLeft_toRightOf="@+id/checkBox7"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp" />
+        tools:text="@string/threedollar_box" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/zipText"
         android:layout_width="76dp"
         android:layout_height="46dp"
         android:contentDescription="@string/zipcode_enter"
@@ -125,11 +132,25 @@
         android:hint="@string/zipcode_enter"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintHorizontal_bias="0.409"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.094"
-        tools:layout_editor_absoluteX="143dp" />
+        app:layout_constraintVertical_bias="0.096" />
+
+    <Button
+        android:id="@+id/button7"
+        style="@android:style/Widget.Material.Light.Button.Toggle"
+        android:layout_width="57dp"
+        android:layout_height="54dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="44dp"
+        android:onClick="onGPSClicked"
+        android:text="GPS"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/zipText"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
